@@ -610,7 +610,8 @@ int main(int argc, char * argv [])
     exit(1);
   }
 
-  if (strcmp(pgm->type, "STK500") == 0) {
+  if ((strcmp(pgm->type, "STK500") == 0)
+      || (strcmp(pgm->type, "avr910") == 0)){
     if (port == default_parallel) {
       port = default_serial;
     }
